[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Minigame2/resources/SpikeyBit.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Minigame2/GameScreens/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigame2/resources/WinSpace.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Minigame2/GameScreens/MovingPlayer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerIdle.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerHit.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerHit2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerShoot.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerMovingR.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Minigame2/resources/Ships/Player/PlayerSx.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Minigame2/resources/CharacterProjectile.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Minigame2/resources/SICharacterGotHit.wav" type="AudioStream" id=12]
[ext_resource path="res://Scenes/Minigame2/resources/PlayerExplosion.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/Minigame2/GameScreens/Points.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 250
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.1246, 11.8488 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "movingR",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "movingL",
"speed": 5.0
} ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.959532, 0.3779 ), -0.930692, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
render_priority = 1
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 1.0
angular_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 3.5
scale = 2.2
scale_curve = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 366.941
margin_top = 330.0
margin_right = 1567.94
margin_bottom = 565.0
custom_fonts/font = SubResource( 1 )
text = "YOU WIN"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="ColorRect/Label"]
wait_time = 3.5
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="ColorRect/Label"]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1250.19, 952.732 )
scale = Vector2( 5, 5 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.233246, 0.181969 )
scale = Vector2( 0.935985, 0.902738 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 4.52917, 16.1859 )
frames = SubResource( 3 )
animation = "movingL"

[node name="BulletPoint" type="Node2D" parent="Player"]
position = Vector2( 0.653259, -13.3238 )

[node name="Sounds" type="Node" parent="Player"]

[node name="CharacterProjectile" type="AudioStreamPlayer" parent="Player/Sounds"]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="CharacterHit" type="AudioStreamPlayer" parent="Player/Sounds"]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="CharacterDeath" type="AudioStreamPlayer" parent="Player/Sounds"]
stream = ExtResource( 13 )
volume_db = -13.0

[node name="Invincibility" type="Timer" parent="Player"]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="Player"]
emitting = false
amount = 64
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 6 )

[node name="Shoot" type="Timer" parent="Player"]
one_shot = true

[node name="ChangeDir" type="Timer" parent="Player"]
wait_time = 0.7
one_shot = true

[node name="Points" type="Label" parent="."]
margin_left = 600.0
margin_top = 700.0
margin_right = 1100.0
margin_bottom = 794.0
custom_fonts/font = SubResource( 7 )
text = "Points : "

[node name="Points2" type="Label" parent="."]
margin_left = 1094.29
margin_top = 700.0
margin_right = 1594.29
margin_bottom = 794.0
custom_fonts/font = SubResource( 7 )
script = ExtResource( 14 )
